# ions-x-deep-emergence-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TASKS.md  ions_x_deep_emergence.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: quickstart.ipynb
tests/: test_cli_ux.py  test_experiments_and_outputs.py  test_simulation_core.py
