[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ions-x-deep-emergence-lab"
version = "0.2.0"
description = "A GPU-optional, multi-agent simulation sandbox for watching causal hints emerge inside coupled dynamical fields (the ATOM framework)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "topherchris420" }]
keywords = ["simulation", "multi-agent", "emergence", "dynamical-systems", "consciousness-research", "atom-framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "networkx",
    "pandas",
    "pillow",
    "ipython",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/topherchris420/ions-x-deep-emergence-lab"
Issues = "https://github.com/topherchris420/ions-x-deep-emergence-lab/issues"

[project.scripts]
ions-x = "ions_x_deep_emergence:main"

[tool.setuptools]
py-modules = ["ions_x_deep_emergence"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 140
target-version = "py310"
# Notebooks are exploratory teaching artifacts; do not hold their compact cells
# (grouped imports, semicolons) to library lint standards.
extend-exclude = ["notebooks", "*.ipynb"]

[tool.ruff.lint]
extend-select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
    "C4",   # comprehensions
    "SIM",  # simplify
    "B",    # bugbear
]
ignore = [
    "E741",  # ambiguous names (F, I are meaningful field/channel symbols here)
    "B008",  # function call in default arg (Path(...) defaults are intentional)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
